// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots All Components/Blockquote With Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
  <cite
    className="sc-htpNat eaMNlw"
  >
    Ian Malcolm
  </cite>
</blockquote>
`;

exports[`Storyshots All Components/Blockquote Without Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
</blockquote>
`;

exports[`Storyshots All Components/Breadcrumbs Normal 1`] = `
<ol
  className="sc-bxivhb cpkjqV"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Breadcrumbs Wrapping 1`] = `
<ol
  className="sc-bxivhb cpkjqV"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Find a fund to create films, TV or new formats of storytelling
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Divider Normal 1`] = `
<hr
  className="sc-bZQynM hsboVq"
/>
`;

exports[`Storyshots All Components/Footer Normal 1`] = `
<footer
  className="sc-gzVnrw jtMeGj"
>
  <img
    alt="British Film Institute"
    className="sc-htoDjs iDzHVx"
    src="test-file-stub"
  />
</footer>
`;

exports[`Storyshots All Components/Header Opaque Background 1`] = `
Array [
  <div
    className="sc-gZMcBi gzQDXt"
  >
    <div
      className="sc-gqjmRU jbLBOJ"
    >
      <ul
        className="sc-VigVT iEDoiP"
      >
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eHgmQL bilsbt"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-cvbbAY jGssRp"
    >
      <a
        aria-current="page"
        className="sc-jWBwVP jBxXhq"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-brqgnP miVqp"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-ckVGcZ fvxxSu"
      >
        <ul
          className="sc-jKJlTe hkQZuo"
        >
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-hMqMXs cyWvwk"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-dxgOiQ phSZo"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kpOJdX hgIpcj"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-dnqmqq dQJMcW"
      >
        <img
          alt=""
          className="sc-iwsKbI jKbzIc"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header Transparent Background 1`] = `
Array [
  <div
    className="sc-gZMcBi gzQDXt"
  >
    <div
      className="sc-gqjmRU jbLBOJ"
    >
      <ul
        className="sc-VigVT iEDoiP"
      >
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eHgmQL eRlcbo"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-cvbbAY jGssRp"
    >
      <a
        aria-current="page"
        className="sc-jWBwVP jBxXhq"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-brqgnP miVqp"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-ckVGcZ fvxxSu"
      >
        <ul
          className="sc-jKJlTe hkQZuo"
        >
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-hMqMXs qeZKQ"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-dxgOiQ phSZo"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kpOJdX hgIpcj"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-dnqmqq kyosTM"
      >
        <img
          alt=""
          className="sc-iwsKbI jKbzIc"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header With Overflowing Content 1`] = `
Array [
  <div
    className="sc-gZMcBi gzQDXt"
  >
    <div
      className="sc-gqjmRU jbLBOJ"
    >
      <ul
        className="sc-VigVT iEDoiP"
      >
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eHgmQL bilsbt"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-cvbbAY jGssRp"
    >
      <a
        aria-current="page"
        className="sc-jWBwVP jBxXhq"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-brqgnP miVqp"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-ckVGcZ fvxxSu"
      >
        <ul
          className="sc-jKJlTe hkQZuo"
        >
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-hMqMXs cyWvwk"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-dxgOiQ phSZo"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kpOJdX hgIpcj"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-dnqmqq dQJMcW"
      >
        <img
          alt=""
          className="sc-iwsKbI jKbzIc"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    style={
      Object {
        "background": "linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%)",
        "height": "200vh",
        "width": "100%",
      }
    }
  />,
]
`;

exports[`Storyshots All Components/Headline Level 1 1`] = `
<h1
  className="sc-cMljjf fJTyhF"
>
  My example headline
</h1>
`;

exports[`Storyshots All Components/Headline Level 2 1`] = `
<h2
  className="sc-jAaTju gmJpMj"
>
  My example headline
</h2>
`;

exports[`Storyshots All Components/Headline Level 3 1`] = `
<h3
  className="sc-jDwBTQ fsxSsC"
>
  My example headline
</h3>
`;

exports[`Storyshots All Components/Hero Full Height 1`] = `
<section
  className="sc-iRbamj hwVrll"
>
  <div
    className="sc-jlyJG fqOUbY"
  >
    <h1
      className="sc-cMljjf fJTyhF"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero Normal 1`] = `
<section
  className="sc-iRbamj kAlVni"
>
  <div
    className="sc-jlyJG fqOUbY"
  >
    <h1
      className="sc-cMljjf fJTyhF"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero With Header 1`] = `
Array [
  <div
    className="sc-gZMcBi gzQDXt"
  >
    <div
      className="sc-gqjmRU jbLBOJ"
    >
      <ul
        className="sc-VigVT iEDoiP"
      >
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eHgmQL eRlcbo"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-cvbbAY jGssRp"
    >
      <a
        aria-current="page"
        className="sc-jWBwVP jBxXhq"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-brqgnP miVqp"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-ckVGcZ fvxxSu"
      >
        <ul
          className="sc-jKJlTe hkQZuo"
        >
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-hMqMXs qeZKQ"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs gvhKWE"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-dxgOiQ phSZo"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kpOJdX hgIpcj"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-dnqmqq kyosTM"
      >
        <img
          alt=""
          className="sc-iwsKbI jKbzIc"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <section
    className="sc-iRbamj kAlVni"
  >
    <div
      className="sc-jlyJG fqOUbY"
    >
      <h1
        className="sc-cMljjf fJTyhF"
      >
        Watch a new film, rediscover your old favourites, and get inspired.
      </h1>
    </div>
  </section>,
]
`;

exports[`Storyshots All Components/Images Normal 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-gipzik bBMCHz"
  >
    <div
      className="sc-Rmtcm eMbqaz"
    >
      <button
        className="sc-bRBYWo bPrsEP"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-hzDkRC hVTTWk"
          src="http://placehold.it/300x200"
        />
      </button>
      <button
        className="sc-bRBYWo bPrsEP"
        onClick={[Function]}
      >
        <img
          alt="Example image 2"
          className="sc-hzDkRC hVTTWk"
          src="http://placehold.it/200x300"
        />
      </button>
      <button
        className="sc-bRBYWo bPrsEP"
        onClick={[Function]}
      >
        <img
          alt="Example image 3"
          className="sc-hzDkRC hVTTWk"
          src="http://placehold.it/600x400"
        />
      </button>
    </div>
    <figcaption
      className="sc-csuQGl cRnPec"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Not Clickable 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-gipzik bBMCHz"
  >
    <div
      className="sc-Rmtcm eMbqaz"
    >
      <img
        alt="Example image"
        className="sc-hzDkRC kRLGFj"
        src="http://placehold.it/300x200"
      />
      <img
        alt="Example image 2"
        className="sc-hzDkRC kRLGFj"
        src="http://placehold.it/200x300"
      />
      <img
        alt="Example image 3"
        className="sc-hzDkRC kRLGFj"
        src="http://placehold.it/600x400"
      />
    </div>
    <figcaption
      className="sc-csuQGl cRnPec"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Only One 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-gipzik bBMCHz"
  >
    <div
      className="sc-Rmtcm XLTdj"
    >
      <button
        className="sc-bRBYWo bPrsEP"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-hzDkRC hVTTWk"
          src="http://placehold.it/300x200"
        />
      </button>
    </div>
    <figcaption
      className="sc-csuQGl cRnPec"
    >
      A single full-width image
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Lead paragraph Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-fBuWsC clReWJ"
  >
    We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
  </article>
</div>
`;

exports[`Storyshots All Components/Page Normal 1`] = `
Array [
  <div
    className="sc-gZMcBi gzQDXt"
  >
    <div
      className="sc-gqjmRU jbLBOJ"
    >
      <ul
        className="sc-VigVT iEDoiP"
      >
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eHgmQL bilsbt"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-cvbbAY jGssRp"
    >
      <a
        aria-current="page"
        className="sc-jWBwVP jBxXhq"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-brqgnP miVqp"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-ckVGcZ fvxxSu"
      >
        <ul
          className="sc-jKJlTe hkQZuo"
        >
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-hMqMXs cyWvwk"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-dxgOiQ phSZo"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kpOJdX hgIpcj"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-dnqmqq dQJMcW"
      >
        <img
          alt=""
          className="sc-iwsKbI jKbzIc"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    className="sc-fMiknA gcQXap"
  >
    <article
      className="sc-dVhcbM fvRniO"
    >
      <ol
        className="sc-bxivhb cpkjqV"
      >
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje eTLzlg"
            href="/#"
            onClick={[Function]}
          >
            Industry
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje eTLzlg"
            href="/#"
            onClick={[Function]}
          >
            Get funding
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          Find a fund to create films, TV or new formats of storytelling
        </li>
      </ol>
      <h1
        className="sc-cMljjf fJTyhF"
      >
        Headline goes here
      </h1>
      <article
        className="sc-fBuWsC clReWJ"
      >
        God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. Do you have any idea how long it takes those cups to decompose. Yes, Yes, without the oops! Yes, Yes, without the oops! Drive us out of here!
      </article>
      <article
        className="sc-fAjcbJ gXXJnw"
      >
        So you two dig up, dig up dinosaurs? Hey, you know how I'm, like, always trying to save the planet? Here's my chance. Is this my espresso machine? Wh-what is-h-how did you get my espresso machine? Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
      </article>
    </article>
    <aside
      className="sc-eqIVtm jUYugM"
    >
      Sidebar here
    </aside>
  </div>,
  <footer
    className="sc-gzVnrw jtMeGj"
  >
    <img
      alt="British Film Institute"
      className="sc-htoDjs iDzHVx"
      src="test-file-stub"
    />
  </footer>,
]
`;

exports[`Storyshots All Components/PageLinks Eight Links 1`] = `
<ul
  className="sc-TOsTZ iYojVS"
>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Industry fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Get funding fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Get funding fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Find a fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Industry fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Get funding fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Get funding fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Find a fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Four Links 1`] = `
<ul
  className="sc-TOsTZ iYojVS"
>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Industry fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Get funding fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Get funding fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Find a fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Three Links 1`] = `
<ul
  className="sc-TOsTZ iYojVS"
>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Industry fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Get funding fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-caSCKo enddjO"
  >
    <h4
      className="sc-gPEVay jpPQLt"
    >
      Get funding fund
    </h4>
    <p
      className="sc-gisBJw gyUDts"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-kjoXOD hEtMFA"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-cHGsZl dAaJaT"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/Text Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-fAjcbJ gXXJnw"
  >
    

            
    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    

            
    <ol>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ol>
    

            
    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    

            
    <ul>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ul>
    
            
            
  </article>
</div>
`;
